--- a/newsletter-signup/src/App.css
+++ b/newsletter-signup/src/App.css
@@ -1,4 +1,29 @@
-.test {
+@font-face {
+    font-family: 'Roboto';
+    src: url('../assets/fonts/Roboto-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+html {
+	font-family: 'Roboto', sans-serif;
 	background-color: #36384d;
-	height: 200px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
+
+#root {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 600px;
+}
+
+.container {
+	background-color: #ffffff;
+	width: 100%;
+	padding: 30px;
+	border-radius: 30px;
 }
