--- a/newsletter-signup/src/App.css
+++ b/newsletter-signup/src/App.css
@@ -5,6 +5,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Roboto-bold';
+    src: url('../assets/fonts/Roboto-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html {
 	font-family: 'Roboto', sans-serif;
 	background-color: #36384d;
@@ -18,12 +25,53 @@ html {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 600px;
+	width: 700px;
 }
 
 .container {
 	background-color: #ffffff;
 	width: 100%;
-	padding: 30px;
-	border-radius: 30px;
+	padding: 20px;
+	border-radius: 18px;
+	display: flex;
+}
+
+.form {
+	display: flex;
+	flex-direction: column;
+}
+
+.content {
+	width: 50%;
+	padding: 20px;
+}	
+
+.img {
+	width: 50%;
+	height: 100%;
+	border-radius: 12px;
+}
+
+.title {
+	font-size: 30px;
+	font-weight: bolder;
+	font-family: 'roboto-bold';
+}
+
+.ul {
+	list-style-type: none;
+	padding: 0;
+}
+
+.li {
+	gap: 10px;
+	display: flex;
+	align-items: center;
+	margin-top: 10px;
+	font-size: 13px;
+}
+
+.dialog {
+	background-color: #ffffff;
+	width: 200px;
 }
